# monolake

./: .gitignore  Cargo.toml  README.md  README_zh.md
.github/workflows/: benchmark-sanity.yaml  build.yaml  ci.sh  sanity-test.yaml
benchmark/: README.md  benchmark-pipeline-monolake.sh  benchmark-pipeline-nginx.sh  benchmark-pipeline.sh  performance-collect.sh  pipeline-client-monolake.sh  pipeline-client-nginx.sh  pipeline-client-traefik.sh  pipeline-proxy-monolake.sh  pipeline-proxy-nginx.sh  pipeline-proxy-traefik.sh  pipeline-proxy.sh  pipeline-server.sh  proxies-setup.drawio
benchmark/client/: benchmark-monolake-http.sh  benchmark-monolake-https.sh  benchmark-nginx-http.sh  benchmark-nginx-https.sh  benchmark-traefik-http.sh  benchmark-traefik-https.sh  setup-once.sh  verify-setup.sh
benchmark/proxy/: setup-once.sh  start-monolake.sh  start-nginx.sh  start-traefik.sh  stop-nginx.sh  stop-traefik.sh  update-server-ip.sh
benchmark/server/: nginx-web.conf  setup-once.sh
benchmark/visualization/: all-http-latency-plot.sh  all-https-latency-plot.sh  latency-plot.sh  monolake-http-latency-plot.sh  monolake-https-latency-plot.sh  nginx-http-latency-plot.sh  nginx-https-latency-plot.sh  performance-csv-convert.py  proxies-performance-plot.sh  traefik-http-latency-plot.sh  traefik-https-latency-plot.sh
docs/: monolake.md
docs/overview/: _index.md
examples/: config-2.toml  config-3.toml  config-4.toml  config.toml  gen_cert.sh  thrift.toml
idl/: base.thrift  example0.thrift
monolake/: Cargo.toml
monolake-core/: Cargo.toml
monolake-services/: Cargo.toml
(+69 files in other folders)
