[workspace]
members = ["monolake", "monolake-core", "monolake-services"]
resolver = "2"

[workspace.dependencies]
monoio = "0.2.0"
monoio-http = { path = "../monoio-http/monoio-http" }
monoio-http-client = { path = "../monoio-http/monoio-http-client" }
monoio-native-tls = { path = "../monoio-tls/monoio-native-tls" }
monoio-rustls = { path = "../monoio-tls/monoio-rustls" }
native-tls = "0.2"
service-async = { path = "../service-async/service-async" }
certain-map = { path = "../certain-map/certain-map" }
local-sync = "0.1"

[profile.release-lto]
inherits = "release"
lto = true
